--- a/autharch_sharc/templates/editor/includes/scopecontent_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/scopecontent_inline_form.html
@@ -1,5 +1,11 @@
 {% load editor_form_tags %}
-<div data-form-type="scopecontent">
-  {% render_field form.id %}
-  {% render_field form.scopecontent %}
+<div class="flex" data-form-type="scopecontent">
+  <div class="fieldset inline-deletable">
+    {% render_form_delete_widget form.DELETE %}
+    {% render_field form.id %}
+    {% render_field form.scopecontent %}
+  </div>
+  <div class="delete-button-block">
+    {% include "./delete_inline_button.html" %}
+  </div>
 </div>
