More fixes for handling the editing of different types of dates in records.

--- a/autharch_sharc/templates/editor/includes/unitdate_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/unitdate_inline_form.html
@@ -3,6 +3,7 @@
   <div class="inline-deletable">
     {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
+    {% render_field form.datechar %}
     {% render_field form.unitdate %}
   </div>
   <div class="delete-button-block">
