--- a/autharch_sharc/templates/editor/includes/unitdatestructured_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/unitdatestructured_inline_form.html
@@ -3,6 +3,7 @@
   <div class="fieldset inline-deletable">
     {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
+    {% render_field form.datechar %}
     {% with dateranges=form.formsets.dateranges %}
     <div class="formset">
       <div class="management_form">
