--- a/autharch_sharc/templates/editor/record_list.html
+++ b/autharch_sharc/templates/editor/record_list.html
@@ -151,17 +151,17 @@
       </tbody>
     </table>
   </div>
-  <div id="records-list-table_pager_info" class="pager">
+  <div  class="pager">
     {% if results_count > 10 %}
     <div class="page-size">
       <p>
-        rows per page: <a href="#" data-label="10">10</a>
+        rows per page: <a href="?page=1&paginate_by=10&{{facet_link}}" >10</a>
         {% if results_count > 25 %}
-          | <a href="?page=1&paginate_by=25" data-label="25">25</a>
+          | <a href="?page=1&paginate_by=25&{{facet_link}}" >25</a>
           {% if results_count > 50 %}
-          | <a href="?page=1&paginate_by=50" data-label="50">50</a>
+          | <a href="?page=1&paginate_by=50&{{facet_link}}" >50</a>
             {% if results_count > 100 %}
-            |  <a href="?page=1&paginate_by=100" data-label="100">100</a>
+            |  <a href="?page=1&paginate_by=100&{{facet_link}}" >100</a>
             {% endif %}
           {% endif %}
         {% endif %}
@@ -169,19 +169,31 @@
     </div>
 
     <div class="page-list">
-    <a href="?page=1">
+    <a href="?page=1&paginate_by={{ paginate_by }}&{{facet_link}}">
       <button class="first"><i class="fal fa-step-backward"></i></button>
     </a>
-      <a href="?page={{ paginator.previous_page_number }}">
+      {% if page_obj.previous_page_number > 1 %}
+      <a href="?page={{ page_obj.previous_page_number }}&paginate_by={{ paginate_by }}&{{facet_link}}">
       <button class="prev"><i class="fal fa-caret-left"></i></button>
       </a>
-        <span class="current">{{ paginator.number }}</span>
-      <a href="?page={{ paginator.next_page_number }}">
+        {% else %}
+        <button class="prev"><i class="fal fa-caret-left"></i></button>
+        {% endif %}
+        <span class="current">Page {{ page_obj.number }} of {{ paginator.num_pages }}</span>
+    {% if page_obj.number < paginator.num_pages %}
+      <a href="?page={{ page_obj.next_page_number }}&paginate_by={{ paginate_by }}&{{facet_link}}">
       <button class="next"><i class="fal fa-caret-right"></i></button>
       </a>
-      <a href="?page={{ paginator.num_pages }}">
+      {% else %}
+      <button class="next"><i class="fal fa-caret-right"></i></button>
+      {% endif %}
+    {% if page_obj.number < paginator.num_pages %}
+      <a href="?page={{ paginator.num_pages }}&paginate_by={{ paginate_by }}&{{facet_link}}">
       <button class="last"><i class="fal fa-step-forward"></i></button>
       </a>
+      {% else %}
+      <button class="last"><i class="fal fa-step-forward"></i></button>
+      {% endif %}
     </div>
     {% endif %}
   </div>
