--- a/autharch_sharc/templates/editor/record_list.html
+++ b/autharch_sharc/templates/editor/record_list.html
@@ -134,6 +134,7 @@
         <tr>
           <th class="description" data-label="Title" data-placeholder="Filter by title" scope="col">Title</th>
           <th class="filter-select" scope="col" data-label="Category" data-placeholder="Category">Category</th>
+          <th data-label="Unit ID" scope="col">Unit ID</th>
           <th class="sorter-sugar" scope="col" data-label="Updated" data-placeholder="Filter by date">Updated</th>
         </tr>
       </thead>
@@ -144,6 +145,7 @@
         <tr>
           <td class="description archival-record"><a href="{% url 'editor:record-edit' record.pk %}">{{ record.unittitle|truncatewords:30 }}</a></td>
           <td>{{ record.category.0 }}</td>
+          <td>{{ record.reference }}</td>
           <td data-text="{{ result.modified.isoformat }}">{{ result.modified }}</td>
         </tr>
         {% endif %}
