--- a/autharch_sharc/templates/editor/includes/eventdescription_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/eventdescription_inline_form.html
@@ -10,6 +10,7 @@
     </div>
   </div>
   <div class="fieldset-body expand inline-deletable">
+    {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
     {% render_field form.eventdescription %}
   </div>
