--- a/autharch_sharc/templates/editor/includes/sourceentry_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/sourceentry_inline_form.html
@@ -9,6 +9,7 @@
     </div>
   </div>
   <div class="fieldset-body expand inline-deletable">
+    {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
     {% render_field form.sourceentry %}
   </div>
