Made home page redirect to records list because there isn't much else to the site.

--- a/autharch_sharc/templates/base.html
+++ b/autharch_sharc/templates/base.html
@@ -35,7 +35,7 @@
         <div class="link{% if current_section == 'home' %} active{% endif %}">
           <a href="{% url 'editor:home' %}">
             <i class="fal fa-home"></i>
-            <h4>Dashboard</h4>
+            <h4>Home</h4>
           </a>
         </div>
         <div class="link{% if current_section == 'records' %} active{% endif %}">
