Made language and script not required; added back required recordid field.

--- a/autharch_sharc/templates/editor/record_edit.html
+++ b/autharch_sharc/templates/editor/record_edit.html
@@ -95,6 +95,7 @@
                 </div>
               </div>
               {% endwith %}
+              {% render_field form.recordid %}
               {% with controlaccesses=form.formsets.controlaccesses %}
               {{ controlaccesses.management_form }}
               {% for controlaccess in controlaccesses.forms %}
