Updated tablesorter code, and sorted out in-table filtering. Removed unused updated column in results list.

--- a/autharch_sharc/templates/base.html
+++ b/autharch_sharc/templates/base.html
@@ -75,11 +75,12 @@
     <script src="{% static 'js/jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'js/select2/select2.min.js' %}"></script>
     <script src="{% static 'js/sugar/sugar.min.js' %}"></script>
-    <script src="{% static 'js/tablesorter/jquery.tablesorter.js' %}"></script>
-    <script src="{% static 'js/tablesorter/jquery.tablesorter.widgets.js' %}"></script>
-    <script src="{% static 'js/tablesorter/parser-date.js' %}"></script>
+    <script src="{% static 'js/tablesorter/jquery.tablesorter.min.js' %}"></script>
+    <script src="{% static 'js/tablesorter/extras/jquery.tablesorter.pager.min.js' %}"></script>
+    <script src="{% static 'js/tablesorter/parsers/parser-date.min.js' %}"></script>
+    <script src="{% static 'js/tablesorter/widgets/widget-filter.min.js' %}"></script>
+    <script src="{% static 'js/tablesorter/widgets/widget-pager.min.js' %}"></script>
     <script src="{% static 'js/tablesorter/pager-custom-controls.js' %}"></script>
-    <script src="{% static 'js/tablesorter/addons/pager/jquery.tablesorter.pager.min.js' %}"></script>
     <script src="{% static 'js/project.js' %}"></script>
     {% endblock end_js %}
     {% block extra_js %}
