Tidied up editing interface slightly.

--- a/autharch_sharc/templates/editor/includes/custodhist_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/custodhist_inline_form.html
@@ -1,17 +1,11 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="custodhist">
-  <div class="fieldset-header">
-    <h4>??</h4>
-    <div class="flex">
-      <div>
-        {% include "./delete_inline_button.html" %}
-      </div>
-      <button class="toggle-tab-button active" onclick="toggleTab()" aria-label="toggle tab"></button>
-    </div>
-  </div>
-  <div class="fieldset-body expand inline-deletable">
+<div class="flex" data-form-type="custodhist">
+  <div class="fieldset inline-deletable">
     {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
     {% render_field form.custodhist %}
   </div>
-</fieldset>
+  <div class="delete-button-block">
+    {% include "./delete_inline_button.html" %}
+  </div>
+</div>
