--- a/autharch_sharc/templates/editor/includes/daterange_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/daterange_inline_form.html
@@ -1,7 +1,7 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="daterange">
+<div data-form-type="daterange">
   {% render_field form.id %}
   {% render_field form.display_date %}
   {% render_field form.fromdate_standarddate %}
   {% render_field form.todate_standarddate %}
-</fieldset>
+</div>
