--- a/autharch_sharc/templates/editor/includes/archref_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/archref_inline_form.html
@@ -1,4 +1,4 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="archref">
+<div data-form-type="archref">
 {% render_field form.archref %}
-</fieldset>
+</div>
