--- a/autharch_sharc/templates/editor/includes/sourceentry_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/sourceentry_inline_form.html
@@ -1,16 +1,11 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="sourceentry">
-  <div class="fieldset-header">
-    <div class="flex">
-      <div>
-        {% include "./delete_inline_button.html" %}
-      </div>
-      <button class="toggle-tab-button active" onclick="toggleTab()" aria-label="toggle tab"></button>
-    </div>
-  </div>
-  <div class="fieldset-body expand inline-deletable">
+<fieldset class="flex" data-form-type="sourceentry">
+  <div class="fieldset inline-deletable">
     {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
     {% render_field form.sourceentry %}
+  </div>
+  <div class="delete-button-block">
+    {% include "./delete_inline_button.html" %}
   </div>
 </fieldset>
