--- a/autharch_sharc/templates/403.html
+++ b/autharch_sharc/templates/403.html
@@ -3,7 +3,17 @@
 {% block title %}Forbidden (403){% endblock %}
 
 {% block content %}
-<h1>Forbidden (403)</h1>
+  <h1>Forbidden (403)</h1>
 
-<p>CSRF verification failed. Request aborted.</p>
+  <p>CSRF verification failed. Request aborted.</p>
 {% endblock content %}
+
+<span class="ead-genreform" data-ead-source="AAT">
+<span class="ead-part">Decorative arts</span></span>
+<span class="ead-geogname"><span class="ead-part">Stratford-upon-Avon, UK</span></span>
+<span class="ead-persname"
+      data-ead-relator="acquirer Princess Marie Louise of Schleswig-Holstein (1872-1956) / acquirer">
+<span class="ead-part">Queen Mary (1867-1953), consort of George V</span></span>
+<span class="ead-persname"
+      data-ead-relator="donor">
+<span class="ead-part">Alfred William Wright (c.1873-after 1924)</span></span>
