Don't show the saved message (from earlier save) if there are form errors when editing a record.

--- a/autharch_sharc/templates/editor/record_edit.html
+++ b/autharch_sharc/templates/editor/record_edit.html
@@ -51,9 +51,7 @@
       <p>There are field-specific errors; please check the form and correct.</p>
       {% endif %}
     </div>
-    {% endif %}
-
-    {% if saved %}
+    {% elif saved %}
     <div class="success-notification">
       <button class="icon-only" aria-label="close notification" onclick="removeNotification()">&#xf00d;</button>
       <h4>Your edits were successfully saved.</h4>
