Corrected label for adding a new unpublished reference to use the front-end term rather than the EAD model name.

--- a/autharch_sharc/templates/editor/includes/source_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/source_inline_form.html
@@ -13,7 +13,7 @@
     </div>
     {% endwith %}
     <label class="create linked-button">
-      <input type="button" class="icon-only" value="&#xf067;" onclick="addEmptyForm('sourceentry', this)">Add source entry
+      <input type="button" class="icon-only" value="&#xf067;" onclick="addEmptyForm('sourceentry', this)">Add unpublished reference
     </label>
   </div>
 </fieldset>
