--- a/autharch_sharc/templates/editor/record_edit.html
+++ b/autharch_sharc/templates/editor/record_edit.html
@@ -27,8 +27,7 @@
       {% endif %}
     </div>
     <div class="action-buttons">
-      {% if not is_deleted %}<button aria-label="delete" class="danger-clear" onclick="showModal('delete-modal')"> Delete</button>{% endif %}
-      <input type="submit" value="{% if is_deleted %}Restore{% else %}Save{% endif %}" form="record-form" class="save"/>
+      <input type="submit" value="Save" form="record-form" class="save"/>
     </div>
   </div>
   {% endblock page_header %}
@@ -454,22 +453,6 @@
       </fieldset>
     </div>
   </form>
-  <div class="modal" id="delete-modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2>Delete this record?</h2>
-      </div>
-      <div class="modal-body"></div>
-      <div class="modal-footer">
-        <form action="{{ delete_url }}" method="post">
-          {% csrf_token %}
-          <input type="hidden" name="DELETE" value="DELETE"/>
-          <input type="button" value="Cancel" class="default modal-cancel" onclick="hideModal()"/>
-          <input type="submit" value="Delete" class="danger"/>
-        </form>
-      </div>
-    </div>
-  </div>
   <div id="empty_forms" style="display: none;">
     {% comment %}Include an empty form for each sub-form on the page,
     to allow for JS creation of new forms, rather than supplying a set
