Fixed notes and publication details forms to include the localtype.

--- a/autharch_sharc/templates/editor/includes/scopecontent_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/scopecontent_inline_form.html
@@ -3,6 +3,7 @@
   <div class="fieldset inline-deletable">
     {% render_form_delete_widget form.DELETE %}
     {% render_field form.id %}
+    {% render_field form.localtype %}
     {% render_field form.scopecontent %}
   </div>
   <div class="delete-button-block">
